--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="overlay-container">
             <img src="images/tsipouro-2.png" alt="Τσίπουρο" class="bottle-img overlay-img">
             <div class="overlay green">
-              <div class="overlay-text">Σας παρουσιάζουμε ένα premium βιολογικό τσίπουρο φτιαγμένο από το τοπικό αποστακτήριο Βασιλειάδη. Αυτό το παραδοσιακό ελληνικό οινοπνευματώδες είναι
+              <div class="overlay-text">Ένα premium βιολογικό τσίπουρο φτιαγμένο από το αποστακτήριο Βασιλειάδη. Το παραδοσιακό ελληνικό οινοπνευματώδες είναι
                 φτιαγμένο από βιολογικά σταφύλια, που καλλιεργούνται με περιβαλλοντικά βιώσιμες πρακτικές και αποστάζονται με 
                 παραδοσιακές μεθόδους. Το αποτέλεσμα είναι ένα απαλό και αρωματικό τσίπουρο με δροσιστικό τελείωμα.</div>
             </div>
